lang selector fix on small screens

--- a/css/launchcircle.css
+++ b/css/launchcircle.css
@@ -2403,6 +2403,10 @@ footer .copyright-info {
         width: 100%;
     }
 
+    header .locale .custom-select {
+        padding: 0.375rem calc( 50% - 1em );
+    }
+
     .carousel-control {
         max-width: 432px;
         margin: 0 auto;
